--- a/SquibbBot13K.Blazor/SquibbBot13K.Blazor/Components/Pages/Weather.razor
+++ b/SquibbBot13K.Blazor/SquibbBot13K.Blazor/Components/Pages/Weather.razor
@@ -1,6 +1,7 @@
 ﻿@page "/weather"
 @attribute [StreamRendering]
 @inject SquibbBot13K.Blazor.Services.IBotEventService BotEventService
+@rendermode InteractiveServer
 
 <PageTitle>Weather</PageTitle>
 
@@ -44,7 +45,7 @@ else
 @code {
    private WeatherForecast[]? forecasts;
 
-   private void TriggerEmergency()
+   public void TriggerEmergency()
    {
       BotEventService.InvokeEvent();
    }
