--- a/SquibbBot13K.Blazor/SquibbBot13K.Blazor/Components/Pages/Weather.razor
+++ b/SquibbBot13K.Blazor/SquibbBot13K.Blazor/Components/Pages/Weather.razor
@@ -47,13 +47,15 @@ else
 
    public void TriggerEmergency()
    {
-      BotEventService.InvokeEvent();
+      // var args = new Services.SnowEmergencyChangeEventArgs { CurrentEmergencyLevel = 10, AffectedCounty = Services.County.Muskingum };
+      // BotEventService.InvokeTestEvent(this, args);
+      BotEventService.RequestSnowmergencyScan(this, new Services.ScanForSnowmergencyEventArgs());
    }
 
     protected override async Task OnInitializedAsync()
     {
         // Simulate asynchronous loading to demonstrate streaming rendering
-        await Task.Delay(500);
+        await Task.Delay(0);
 
         var startDate = DateOnly.FromDateTime(DateTime.Now);
         var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
