--- a/SquibbBot13K.Blazor/SquibbBot13K.Blazor/Components/Layout/NavMenu.razor
+++ b/SquibbBot13K.Blazor/SquibbBot13K.Blazor/Components/Layout/NavMenu.razor
@@ -24,6 +24,12 @@
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
+        </div> 
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="configuration">
+                <span class="bi bi-gear" aria-hidden="true"></span> Configuration
+            </NavLink>
         </div>
     </nav>
 </div>
